# sichuan_solver

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: github-pages.yml  rust.yml
client/: .eslintrc.json  package.json  tsconfig.json  webpack.common.js
public/: main.css
src/: components.rs  main.rs
src/solver/: connect.rs  direction.rs  lut.rs  mod.rs  solver.rs  transform.rs  utils.rs
src/view_components/: card.rs  container_tab.rs  edit_map_canvas.rs  edit_view.rs  edit_view_control.rs  edit_view_control_tile_selector.rs  edit_view_control_tile_selector_button.rs  input_form_control_element.rs  main_container.rs  mod.rs  result_connection_list.rs  result_connection_list_item.rs  result_map_canvas.rs  result_view.rs  tile_map_canvas.rs
src/view_components/icons/: tiles.rs
view/: Cargo.toml  index.html  package.json  tsconfig.json  webpack.dev.js  webpack.prod.js
view/public/: main.css
view/src/: colors.rs  components.rs  editable_tilemap.tsx  panel.rs  solve_result_view.rs  solve_step_list.rs  solve_step_list_item.rs  styles.rs  tile_edit_controller.rs  tile_edit_view.rs  tile_image_button.rs  tile_images.ts  tile_map_view.rs  tile_selector.rs
view/src/@types/: event.d.ts  props.d.ts  tile.d.ts
view/src/data/: tiles.json
view/src/icon/: tile.rs
wasm/: Cargo.toml
wasm/src/: components.rs  connect.rs  lib.rs  solver.rs  transform.rs
