[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

crate-type = ["rlib", "cdylib"]

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
js-sys = "0.3.58"
wasm-logger = "0.2.0"
log = "0.4.17"
gloo-utils = "0.1.4"
base64 = "0.13.0"
once_cell = "1.16.0"
ndarray = "0.15.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "SvgElement",
    "SvgImageElement",
    "MouseEvent",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "CanvasRenderingContext2d",
]

[dependencies.stylist]
version = "0.10.1"
features = [
    "yew_integration"
]
