[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

crate-type = ["rlib", "cdylib"]

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
js-sys = "0.3.58"
wasm-logger = "0.2.0"
log = "0.4.17"
base64 = "0.13.0"
wasm-bindgen-futures = "0.4.34"
futures = "0.3.28"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "SvgElement",
    "SvgImageElement",
    "MouseEvent",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "CanvasRenderingContext2d",
]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 'z'
lto = true
